src/index.css
body {
    margin: 0;
    font-family: Verdana, sans-serif;
}

#picture{
    border: 1px;
    border-style: solid;
    border-color: black;
}

#nav{
    margin-left: 5px;
}

#text{
    font-size: 14px;
    margin-left: 8%;
    margin-right: 8%;
}

button{
    background-color: #20a37a;
    border: 1px #3ba080;
    color: white;
    padding: 15px 32px;
    margin: 5px 5px 5px 5px;
    text-align: center;
    font-size: 16px;
    width: 100px;
    display: block;
    border-radius: 5px;
}

button:hover{
    background-color: #198462;
    border-radius: 8px;
}

footer{
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
    height: 50px;
    background-color: darkgrey;
    color: white;
    text-align: center;
}

/*Grid style*/
.container {
    display: grid;
    grid-auto-flow: row;
    grid-gap: 5%;
    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
    grid-template-rows: 50px 50px;
    margin-right: 5%;
    margin-left: 5%;
}

@media (max-width: 800px) {
    /*tablets*/
    .container{
        grid-auto-flow: column;
    }
    .item{
        margin-top: 20px;
    }
}

@media (max-width: 500px) {
    /*mobil*/
    .container{
        grid-auto-flow: column;
    }
}

